--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.8.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
