--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
