--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "gsap": "^3.12.7",
+    "katex": "^0.16.21",
     "lucide-react": "^0.475.0",
+    "mermaid": "^11.4.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-katex": "^3.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
